# rl-thesis

./: .gitignore  README.md  pyproject.toml  vast_deploy.sh  vast_deploy_bc.sh  vast_deploy_v5_experiments.sh  vast_train.sh  vast_train_bc.sh  vast_train_v5_fs.sh  vast_train_v5_long.sh
figures/: ablation_grid.py  aggregate.py  bottleneck_progression.py  collapse_curves.py  common.py  dump_per_episode.py  dump_trajectories.py  failure_modes.py  learning_curves.py  observation_space.py  plasticity_interventions.py  return_vs_survival.py  trajectories.py
latex/: brainstorming.md  experiments_log.md  paper_framing_notes.md  refs.bib  thesis.aux  thesis.bbl  thesis.blg  thesis.out  thesis.tex  thesis.toc
latex/original/: refs.bib  thesis.tex
latex/simplified/: todo.md
scripts/: bootstrap_vast_reward_sweep.sh
src/rl_thesis/: cli.py  utils.py
src/rl_thesis/agent/: dqn.py  human_heuristic.py  network.py  replay_buffer.py
src/rl_thesis/config/: config.py  experiment_configs.py  reward_configs.py
src/rl_thesis/demo/: demo.py
src/rl_thesis/environment/: entities.py  frame_stack.py  gym_env.py  world.py
src/rl_thesis/training/: benchmark.py  metrics.py  reward_sweep.py  train.py  trainer.py
src/rl_thesis/visualization/: renderer.py
