[project]
name = "rl-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "philippmerz", email = "philippmerz48@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "pygame>=2.6.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
]

[project.scripts]
rl-thesis = "rl_thesis.cli:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
