[project]
name = "rl-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "philippmerz", email = "philippmerz48@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pygame>=2.5",
    "torch>=2.4",
    "tqdm>=4.66",
    "typer>=0.12",
]

[project.scripts]
rl-thesis = "rl_thesis.cli:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
